# Azure-DocIntel-Extract

./: .env.example  .gitignore  README.md  hello.py  pyproject.toml
examples/: extract_invoice.py
src/azure_docintel_extract/: __init__.py  extractor.py  models.py
